Fixed minor text spacing visual error.

--- a/proofviz-frontend/src/App.css
+++ b/proofviz-frontend/src/App.css
@@ -230,7 +230,7 @@
 
 .instructions-box ul {
   padding-left: 20px; /* Standard bullet point indent */
-  margin-top: -30px;
+  margin-top: -20px;
   margin-bottom: 5px;
 }
 
